fix: pre tag overflow

--- a/src/app.css
+++ b/src/app.css
@@ -158,4 +158,5 @@ li {
 	padding: 1rem;
 	border-radius: 8px;
 	tab-size: 2;
+	overflow: auto;
 }
